--- a/style.css
+++ b/style.css
@@ -37,8 +37,45 @@ main {
 
 .mainContent {
     display: flex;
+    flex-direction: row;
+    background-color: #1f2937;
+    color: #e5e6e7;
+    gap: 25px;
+    justify-content: space-between;
+    align-items: center;
+    flex: 1;
+}
+
+.subMain1 {
+    display: flex;
     flex-direction: column;
-    background-color: aqua;
+    width: 480px;
+    margin-left: 150px;
+    
+}
+
+.subMain1 button {
+    width: 120px;
+    height: 35px;
+    border-radius: 30px;
+    background-color: #3882F6;
+    color: white;
+    border-width: 0;
+}
+
+.subMain1 h1 {
+    font-size: 48px;;
+}
+
+.subMain1 h4 {
+    font-size: 18px;
+}
+
+.subMain2 {
+    display: flex;
+    margin-right: 100px;
+    
+
 }
 
 .image {
