--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     font-family: "Roboto", sans-serif;
 }
 
+body {
+    background-color: black;
+}
+
 a {
     text-decoration: none;
     color: inherit;
@@ -147,14 +151,41 @@ main {
     font-size: 24px;
 }
 
+
+
 .fourth {
-    background-color: coral;
+    background-color: white;
+    
 }
 
-.fifth {
-    background-color: plum;
+.fourthContain {
+    display: flex;
+    color: white;
+    background-color: #3882f6;
+    margin: 100px 200px;
+    padding: 50px;
+    justify-content: space-around;
+    align-items: center;
+    border-radius: 20px;
+    font-size: 22px;
 }
+
+.fourthContain button {
+    width: 150px;   
+    height: 50px;
+    border-radius: 20px;
+    border: solid white 4px;
+    background-color: #3882f6;
+    font-size: 16px;
+    color: white;
+}
+
+
+
 
 footer {
-    background-color: khaki;
+    background-color: #1f2937;
+    color: white;
+    text-align: center;
+    padding: 50px 400px;
 }
